# dialogflow_ros

./: CMakeLists.txt
config/: params.yaml
dialogflow_ros/: setup.cfg  setup.py  steps.txt
dialogflow_ros/config/: params.yaml
dialogflow_ros/dialogflow_ros/: MicrophoneStream.py  dialogflow_client.py
dialogflow_ros/dialogflow_ros/utils/: converters.py  output.py
dialogflow_ros/launch/: dialogflow.launch
dialogflow_ros/scripts/: detect_intent_service.py  google_client.py  hotword_dialogflow.py
dialogflow_ros/scripts/dialogflow_ros/: dialogflow_client.py
dialogflow_ros/scripts/dialogflow_ros/utils/: converters.py  output.py
dialogflow_ros/scripts/test/: test_intent_event.py
dialogflow_ros/test/: test_intent_text.py
dialogflow_ros_launch/: CMakeLists.txt  package.xml
dialogflow_ros_launch/config/: df_api_ros2.json  params.yaml
dialogflow_ros_launch/launch/: dialogflow_launch.py
dialogflow_ros_msgs/: CMakeLists.txt  package.xml
dialogflow_ros_msgs/action/: Listen.action
launch/: dialogflow.launch
scripts/dialogflow_ros/: dialogflow_client.py
scripts/dialogflow_ros/utils/: converters.py  output.py
