<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dialogflow_ros_launch</name>
  <version>0.0.1</version>
  <description>
    Launchers for dialogflow_ros
  </description>
  <maintainer email="jonatan.gines@urjc.es">Jonatan Gines</maintainer>
  <license>Apache License 2.0</license>

  <author>Jonatan Gines</author>
  <author email="jonatan.gines@urjc.es">Jonatan Gines</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <!--<test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>